fixed the state and attribute remove issues in query builder login view button alignment, signup link, key enter fixed

--- a/styles/css/customer-1.0.css
+++ b/styles/css/customer-1.0.css
@@ -622,7 +622,7 @@ cmds >> common data source style
     position: absolute;
     left: 20%;
     top: 30%;
-    z-index: 1;
+    z-index: 2;
     border-radius: 10px;
     display: none;
 }
